k8/gatway-api/Demo-Example/demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: demo-gateway
spec:
  selector:
    app: demo-app
  ports:
    - name: http
      port: 80
      targetPort: 5678
